# Nova

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile_commands.json
.cache/clangd/index/: Main.cpp.23612B283A4D56FF.idx  Test.cpp.AF4016645508F888.idx  Test.h.9061A2E0BE228F17.idx
Nova/: CMakeLists.txt
Nova/source/: Test.cpp  Test.h
Nova/source/Nova/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  Util.h  Util.hpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  Window.hpp
Nova/source/Nova/Camera/: FreeLookCamera.cpp  FreeLookCamera.h  OrthographicCamera.cpp  OrthographicCamera.h
Nova/source/Platform/: GLWindow.cpp  GLWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/: basic.glsl
Sandbox/source/: Main.cpp
